# mcp-server-files

./: CLAUDE.md  README.md  mcp.json  pip_install.sh  push_github.sh  push_pypi.sh  pyproject.toml
mcp_server_files/: __init__.py  __main__.py  server.py
