[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-files"
version = "0.1.0"
description = "MCP server that gives AI models read access to the local filesystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Martin Schlatter", email = "github@schlatter.eu" }]
dependencies = [
    "mcp",
    "pydantic",
]

[project.scripts]
mcp-server-files = "mcp_server_files:main"

[project.urls]
Homepage = "https://github.com/martin3000/mcp-server-files"
